<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SettingsActivity"
    android:background="@color/app_clr"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_clr"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/ToolbarTheme">

            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mMenuImg"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/ic_back_btn" />

                <TextView
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:gravity="center|left"
                    android:textSize="24dp"
                    android:textColor="@android:color/white"
                    android:text="@string/update_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                </TextView>




            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_16sdp"
        android:paddingLeft="@dimen/_16sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginTop="@dimen/_10sdp"
            app:hintEnabled="false">

            <EditText
                android:padding="@dimen/_7sdp"
                android:maxLength="10"
                android:background="@drawable/edit_text_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/_14sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginTop="@dimen/_10sdp"
            app:hintEnabled="false">

            <EditText
                android:padding="@dimen/_7sdp"
                android:maxLength="10"
                android:background="@drawable/edit_text_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/change_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/_14sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginTop="@dimen/_10sdp"
            app:hintEnabled="false">

            <EditText
                android:padding="@dimen/_7sdp"
                android:maxLength="10"
                android:background="@drawable/edit_text_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/email_id"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/_14sdp" />

        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:textColor="@android:color/white"
                android:textStyle="normal"
                android:textSize="16dp"
                android:textAllCaps="false"
                android:text="@string/confirm"
                android:background="@drawable/button_bg"
                android:layout_width="260dp"
                android:layout_height="50dp">


            </Button>


        </LinearLayout>






    </LinearLayout>





</LinearLayout>