<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/sign_up_f"
    android:layout_height="match_parent"
    android:background="@color/app_clr">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_clr"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/ToolbarTheme">

            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mMenuImg"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/ic_back_btn" />




            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


        <ScrollView
            android:layout_below="@id/appbar"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_above="@id/mAlreadyHaveAct_tv"
            android:layout_height="match_parent">

            <LinearLayout
                style="@style/app_form_style"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_gravity="center"
                            android:src="@drawable/ic_namaste_hand"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </ImageView>

                        <TextView
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:textStyle="normal"
                            android:textSize="@dimen/_14sdp"
                            android:textColor="@android:color/white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Namaste! We would like to know more about you.">

                        </TextView>


                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/et_mobile"
                            android:padding="@dimen/_7sdp"
                            android:maxLength="10"
                            android:background="@drawable/edit_text_bg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/mobile_number"
                            android:inputType="number"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/_14sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/et_owner"
                            android:padding="@dimen/_7sdp"
                            android:maxLength="50"
                            android:background="@drawable/edit_text_bg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/owner_name"
                            android:inputType="text"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/_14sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/et_business"
                            android:padding="@dimen/_7sdp"
                            android:maxLength="50"
                            android:background="@drawable/edit_text_bg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/business_name"
                            android:inputType="text"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/_14sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/et_email"
                            android:padding="@dimen/_7sdp"
                            android:maxLength="50"
                            android:background="@drawable/edit_text_bg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/email_id"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/_14sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:endIconMode="custom"
                        app:endIconTint="@color/white"
                        app:endIconDrawable="@drawable/ic_location"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_address"
                            android:padding="@dimen/_7sdp"
                            android:maxLength="50"
                            android:background="@drawable/edit_text_bg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="Address"
                            android:inputType="text"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/_14sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:background="@drawable/edit_text_bg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:enabled="false"
                            android:id="@+id/mCategoryEt"
                            android:background="@null"
                            android:layout_weight="1.7"
                            android:padding="@dimen/_7sdp"
                            android:maxLength="50"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="Select Category"
                            android:inputType="text"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/_14sdp" />

                        <LinearLayout
                            android:id="@+id/mCategoryLl"
                            android:gravity="center"
                            android:layout_weight="0.3"
                            android:layout_width="0dp"
                            android:layout_height="match_parent">

                            <ImageView
                                android:src="@drawable/ic_arrow_down"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent">

                            </ImageView>

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/mSubCategoryLl"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:background="@drawable/edit_text_bg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/mSubCategoryEt"
                            android:enabled="false"
                            android:background="@null"
                            android:layout_weight="1.7"
                            android:padding="@dimen/_7sdp"
                            android:maxLength="50"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="Select Subcategory"
                            android:inputType="text"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/_14sdp" />

                        <LinearLayout
                            android:id="@+id/mSubCategoryDropdown"
                            android:gravity="center"
                            android:layout_weight="0.3"
                            android:layout_width="0dp"
                            android:layout_height="match_parent">

                            <ImageView
                                android:src="@drawable/ic_arrow_down"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent">

                            </ImageView>

                        </LinearLayout>


                    </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:errorEnabled="true"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/et_password"
                        android:padding="@dimen/_7sdp"
                        android:maxLength="50"
                        android:background="@drawable/edit_text_bg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_14sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        app:errorEnabled="true"
                        app:hintEnabled="false">

                        <EditText
                            android:id="@+id/et_refcode"
                            android:padding="@dimen/_7sdp"
                            android:maxLength="50"
                            android:background="@drawable/edit_text_bg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:hint="@string/referral_code"
                            android:inputType="text"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/_14sdp" />

                    </com.google.android.material.textfield.TextInputLayout>


                        <Button
                            android:id="@+id/mConfirmBtn"
                            android:textColor="@android:color/white"
                            android:textStyle="normal"
                            android:textSize="16dp"
                            android:textAllCaps="false"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/confirm"
                            android:background="@drawable/light_pink_button"
                            android:layout_width="260dp"
                            android:layout_height="50dp"/>


            </LinearLayout>


        </ScrollView>

    <TextView
        android:id="@+id/mAlreadyHaveAct_tv"
        android:padding="@dimen/_7sdp"
        android:textStyle="normal"
        android:textSize="16dp"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
    android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_log_in"/>



</RelativeLayout>